# 01-rcli

./: .gitignore  Cargo.toml  README.md  deny.toml  test.rest
fixtures/: b64.txt  blake3.txt  ed25519.pk  ed25519.sk  hello-base-64-urlsafe.txt  hello-blake3-sig.txt  hello-ed25519-sig.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
tests/: lib_api_test.rs  serde_test.rs
