[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["tom"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
# 有些 feature 不需要，控制 feature，可以控制项目的二进制大小
clap = { version = "4.5.10", features = ["derive"] }
csv = "1.3.0"
# featur = ["derive"] 表示使用 Serde 的派生宏，可以自动生成序列化和反序列化代码
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
