[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["tom"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.0"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
# 有些 feature 不需要，控制 feature，可以控制项目的二进制大小
clap = { version = "4.5.10", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
# featur = ["derive"] 表示使用 Serde 的派生宏，可以自动生成序列化和反序列化代码
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
zxcvbn = "2"
bs58 = "0.5.1"
